Latest UR_OS changes (#1)
* Implemented SJF_NP and SJF_P using common code to avoid repetitions

* RR small changes

* aesthetic changes